# QuModLibs

./: .gitignore  LICENSE  README.en.md  README.md
Mini/: README.md  ReadMe.txt  Server.py  modMain.py
Mini/QuModLibs/: Client.py  Information.py  QuMod.py  Server.py  Util.py
Mini/QuModLibs/Systems/Loader/: Client.py
Optional/: README.md
Optional/Modules/EventRegistry/: Events.py  GameSettings.py  Item.py  Physics.py  Player.py
Scripts/: Server.py  modMain.py
Scripts/QuModLibs/: Client.py  IN.py  Information.py  Math.py  QuMod.py  Server.py  UI.py  UIExchange.py  Util.py
Scripts/QuModLibs/Include/GL_Render/: Client.py  Server.py
Scripts/QuModLibs/Modules/CallService/: Client.py  Server.py
Scripts/QuModLibs/Modules/Camera/: Client.py
Scripts/QuModLibs/Modules/DataStore/: Client.py  Core.py  Server.py
Scripts/QuModLibs/Modules/EntityComps/: Client.py  Server.py
Scripts/QuModLibs/Modules/Items/: Client.py  Globals.py  Server.py
Scripts/QuModLibs/Modules/MultiplayerLobby/: Server.py
Scripts/QuModLibs/Modules/Promise/: Client.py  Core.py  Server.py
Scripts/QuModLibs/Modules/Services/: Client.py  Globals.py  Server.py
Scripts/QuModLibs/Modules/UI/: Anims.py  Client.py  EnhancedUI.py  Funcs.py  RAII.py
Scripts/QuModLibs/Modules/Utils/: AutoExpiringObjects.py
Scripts/QuModLibs/QuServerApi/: Events.py
Scripts/QuModLibs/Systems/Loader/: Server.py  SharedRes.py
Tests/: .gitignore
Tests/RefTest/B/TestMod/: Client.py
Tools/: README.md  ReadMe.txt
Tools/Builds/: .gitignore  McEventCodeGen.py  McEventScraper.py
Tools/NeLobby/: ReadMe.md
Tools/NewAddon/: CMakeLists.txt
Tools/NewAddon/src/: main.cpp
Tools/QuModMEX/: .gitignore  CMakeLists.txt  QuModMEX.h  README.md  main.cpp
Tools/QuModMEX/src/: QuModMEX.cpp
Tools/QuModPurge/: CMakeLists.txt  EnvEncode.cpp  EnvEncode.h  QuModPurge.cpp
Tools/QuPresets/: QuLibsAPI.hpp  QuPresetCustomAPI.html  QuPresetTool.html
Tools/QuPresets/DemoPresets/: base2DItem.qkv  baseEntity.qkv  hurtTextRender.qkv  mosaicWorldEffect.qkv  visualSpawnEgg.qkv
Tools/QuPresets/DemoPresets/base2DItem/: dataView.json  manifest.json  useApi.json
Tools/QuPresets/DemoPresets/baseEntity/: dataView.json  manifest.json  useApi.json
Tools/QuPresets/DemoPresets/hurtTextRender/: dataView.json  manifest.json  useApi.json
Tools/联机大厅/: ReadMe.md  TARGET_CONFIG.json
(+16 files in other folders)
